# vilib

visual_lib/: CMakeLists.txt  vilibConfig.cmake.in
visual_lib/include/vilib/common/: frame.h
visual_lib/include/vilib/feature_detection/: detector_base_gpu.h
visual_lib/include/vilib/feature_detection/fast/: fast_gpu.h
visual_lib/include/vilib/preprocess/: image_preprocessing.h  pyramid.h
visual_lib/include/vilib/storage/: pyramid_pool.h  subframe.h
visual_lib/python/: CMakeLists.txt  setup.py  test.py
visual_lib/python/include/: torch_frame.h
visual_lib/python/src/: torch_frame.cpp  torch_vilib.cpp  vilib.cpp
visual_lib/src/common/: frame.cpp
visual_lib/src/feature_detection/: detector_base.cpp
visual_lib/src/feature_detection/fast/: fast_gpu.cpp
visual_lib/src/feature_tracker/: feature_tracker_gpu.cpp
visual_lib/src/preprocess/: image_preprocessing.cpp  pyramid_cpu.cpp  pyramid_gpu.cu
visual_lib/src/storage/: pyramid_pool.cpp  subframe.cpp  subframe_pool.cpp
